Fixed profile picture blob overflow

--- a/styles.scss
+++ b/styles.scss
@@ -9,6 +9,7 @@
 
 header {
     position: fixed;
+    z-index: 5;
     width: 100%;
     height: 75px;
     background: #ffffff1a;
@@ -40,13 +41,6 @@ header {
 body {
     background: $darker-blue;
     color: #fff;
-}
-
-#waves {
-    position: absolute;
-    left: 0;
-    top: -15%;
-    z-index: -10;
 }
 
 /* Burger-Menu */
@@ -157,6 +151,7 @@ input[type="checkbox"] {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 
     #informations {
         margin-top: -40%;
@@ -176,6 +171,13 @@ input[type="checkbox"] {
             font-size: 32px;
         }
     }
+
+    #waves {
+        position: absolute;
+        left: 0;
+        top: -15%;
+        z-index: -10;
+    }
 }
 
 #discover-button {
@@ -190,13 +192,12 @@ input[type="checkbox"] {
 #main {
     margin-top: 20%;
 
-    #profile_picture {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    #profile {
         position: relative;
+        text-align: center;
+        overflow-x: clip;
 
-        img {
+        &_picture {
             width: 300px;
             height: 300px;
             border-radius: 50%;
@@ -204,11 +205,12 @@ input[type="checkbox"] {
             background: $darker-blue;
         }
 
-        #blob {
+        &_blob {
             position: absolute;
             z-index: -10;
-            left: -10%;
-            top: -20%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -45%);
         }
     }
 }
